Fix intro overlay on mobile screens

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -240,6 +240,7 @@ footer {
 .copyright {
     font-size: 15px;
     text-align: center;
+    margin-bottom: 0;
 }
 
 /* PS2 & PS5 Styling */
@@ -397,10 +398,11 @@ footer {
 
     .intro-overlay {
         position: absolute;
-        right: 170px;
-        bottom: 170px;
+        left: 27%;
+        margin: auto;
         text-align: center;
         font-size: small;
+        width: 50%;
     }
 
     .ps1-ps3-ps4-info {
